--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=Person_Service
 
 #MySQL by docker
 spring.datasource.url=jdbc:mysql://localhost:3306/PERSON
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.username=${DB_USER_NAME}
+spring.datasource.password=${DB_USER_PASSWORD}
 
 
 #JPA Hibernate
